[package]
name = "aqaval"
version = "0.1.0"
authors = ["Zander Brown <ZanderBrown@users.noreply.github.com>"]
edition = "2018"

[features]
default = ["getopts", "linefeed", "ansi_term"]

[dependencies]
getopts = { version = "0.2.21", optional = true }
linefeed = { version = "0.6.0", optional = true }
ansi_term = { version = "0.12.1", optional = true }
rand = "0.7.2"

[target.'cfg(target_arch = "wasm")'.dependencies.rand]
version = "0.7.2"
features = ["stdweb"]

[[bin]]
name="aqaval"
path="src/bin/aqaval.rs"
required-features = ["getopts", "linefeed", "ansi_term"]
