[package]
name = "aqaval"
version = "0.1.0"
authors = ["Zander Brown <ZanderBrown@users.noreply.github.com>"]
edition = "2018"

[features]
default = ["getopts", "linefeed", "ansi_term"]

[dependencies]
getopts = { version = "0.2.21", optional = true }
linefeed = { version = "0.6.0", optional = true }
ansi_term = { version = "0.12.1", optional = true }
rand = "0.8.5"

[target.'cfg(target_arch = "wasm")'.dependencies.getrandom]
version = "0.2.6"
features = ["js"]

[[bin]]
name="aqaval"
path="src/bin/aqaval.rs"
required-features = ["getopts", "linefeed", "ansi_term"]
