[package]
name = "aqaval"
version = "0.2.0"
authors = ["Zander Brown <ZanderBrown@users.noreply.github.com>"]
edition = "2021"

[features]
default = ["clap", "linefeed", "yansi"]

[dependencies]
clap = { version = "3.1", features = ["derive"], optional = true }
linefeed = { version = "0.6", optional = true }
yansi = { version = "0.5", optional = true }
rand = "0.8.5"

[target.'cfg(target_arch = "wasm")'.dependencies.getrandom]
version = "0.2.6"
features = ["js"]

[[bin]]
name="aqaval"
path="src/bin/aqaval.rs"
required-features = ["clap", "linefeed", "yansi"]
